force-app/main/default/objects/STOCK__c/STOCK__c.object-meta.xml
<CustomObject>
    <label>재고</label>
    <nameField>
        <label>재고 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>