force-app/main/default/objects/STOCK__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>변경처리</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Action</valueSetName>
    </valueSet>
</CustomField>