force-app/main/default/objects/STOCK__c/fields/fm_MAKTX_link__c.field-meta.xml
<CustomField>
    <fullName>fm_MAKTX_link__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; MAKTX__c, &quot;&quot;, &apos;_self&apos;) &amp;
HYPERLINK(&quot;/&quot; &amp; Id, MAKTX__c, &apos;_self&apos;)</formula>
    <label>자재내역(link)</label>
    <type>Text</type>
</CustomField>