force-app/main/default/objects/STOCK__c/fields/isSystemJob__c.field-meta.xml
<CustomField>
    <fullName>isSystemJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSystemJob</label>
    <type>Checkbox</type>
</CustomField>