force-app/main/default/objects/STOCK__c/fields/MATNR__c.field-meta.xml
<CustomField>
    <fullName>MATNR__c</fullName>
    <label>상품코드</label>
    <length>18</length>
    <type>Text</type>
</CustomField>