force-app/main/default/objects/STOCK__c/fields/MEINS__c.field-meta.xml
<CustomField>
    <fullName>MEINS__c</fullName>
    <label>단위</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>