force-app/main/default/objects/STOCK__c/fields/MENGE__c.field-meta.xml
<CustomField>
    <fullName>MENGE__c</fullName>
    <label>재고수량</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>