force-app/main/default/objects/STOCK__c/fields/MENGE_KG__c.field-meta.xml
<CustomField>
    <fullName>MENGE_KG__c</fullName>
    <label>총중량(KG)</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>