force-app/main/default/objects/STOCK__c/fields/P_PSMNG__c.field-meta.xml
<CustomField>
    <fullName>P_PSMNG__c</fullName>
    <label>출고제한수량</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>