force-app/main/default/objects/STOCK__c/fields/STOCKKEY__c.field-meta.xml
<CustomField>
    <fullName>STOCKKEY__c</fullName>
    <externalId>true</externalId>
    <label>CKWMS키</label>
    <length>40</length>
    <type>Text</type>
</CustomField>