force-app/main/default/objects/STOCK__c/fields/U_PSMNG__c.field-meta.xml
<CustomField>
    <fullName>U_PSMNG__c</fullName>
    <label>사용가능수량</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>