force-app/main/default/objects/STOCK__c/fields/WERKS__c.field-meta.xml
<CustomField>
    <fullName>WERKS__c</fullName>
    <label>플랜트</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WERKS</valueSetName>
    </valueSet>
</CustomField>