force-app/main/default/objects/STOCK__c/fields/xmsgs__c.field-meta.xml
<CustomField>
    <fullName>xmsgs__c</fullName>
    <label>메세지</label>
    <length>50</length>
    <type>Text</type>
</CustomField>