force-app/main/default/objects/STOCK__c/fields/ZTIMS__c.field-meta.xml
<CustomField>
    <fullName>ZTIMS__c</fullName>
    <label>TIME STAMP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>