force-app/main/default/objects/STOCK__c/validationRules/ConfirmActionLess.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmActionLess</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(Action__c,&quot;974&quot;),
      ISPICKVAL(Action__c,&quot;948&quot;),
      ISPICKVAL(Action__c,&quot;946&quot;)
   ),
   PRIORVALUE(MENGE__c) &gt;= MENGE__c,
   NOT(isSystemJob__c) 
)</errorConditionFormula>
    <errorDisplayField>MENGE__c</errorDisplayField>
    <errorMessage>해당 변경처리는 변경된 재고수량 값이 더 커야 합니다.</errorMessage>
</ValidationRule>