force-app/main/default/objects/STOCK__c/validationRules/ConfirmActionMore.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmActionMore</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(
      ISPICKVAL(Action__c,&quot;973&quot;),
      ISPICKVAL(Action__c,&quot;947&quot;),
      ISPICKVAL(Action__c,&quot;945&quot;)
   ), 
   PRIORVALUE(MENGE__c) &lt;= MENGE__c,
   NOT(isSystemJob__c) 
)</errorConditionFormula>
    <errorDisplayField>MENGE__c</errorDisplayField>
    <errorMessage>해당 변경처리는 변경된 재고수량 값이 더 작아야 합니다.</errorMessage>
</ValidationRule>