force-app/main/default/objects/STOCK__c/validationRules/ConformActionChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ConformActionChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
   Not(ISCHANGED(MENGE__c)) , 
   NOT(ISPICKVAL(Action__c, &quot;&quot;)),
   NOT(isSystemJob__c)
)</errorConditionFormula>
    <errorDisplayField>Action__c</errorDisplayField>
    <errorMessage>수량변동 없이 처리방안만 변경할 수 없습니다.</errorMessage>
</ValidationRule>