force-app/main/default/objects/STOCK__c/validationRules/ConformProductQuantityChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ConformProductQuantityChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   ISCHANGED(MENGE__c) ,  
   ISPICKVAL(Action__c, &quot;&quot;), 
   ISPICKVAL(MAT_TYP__c,&quot;1&quot;),
   NOT(isSystemJob__c) 
)</errorConditionFormula>
    <errorMessage>수량변경 시 처리방안을 필수로 선택해주세요.</errorMessage>
</ValidationRule>