force-app/main/default/objects/STOCK__c/validationRules/ProhibitMaterialQuantityChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ProhibitMaterialQuantityChange</fullName>
    <active>true</active>
    <description>원자재 변경 방지</description>
    <errorConditionFormula>AND(
   ISPICKVAL(MAT_TYP__c,&quot;2&quot;),
   ISCHANGED(MENGE__c),
   NOT(isSystemJob__c) 
)</errorConditionFormula>
    <errorDisplayField>MENGE__c</errorDisplayField>
    <errorMessage>원자재의 재고수량은 변경할 수 없습니다.</errorMessage>
</ValidationRule>