force-app/main/default/objects/STOCK__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BATCH__c</columns>
    <columns>MAKTX__c</columns>
    <columns>MENGE__c</columns>
    <filterScope>Everything</filterScope>
    <label>전체 재고</label>
</ListView>