force-app/main/default/objects/STOCK__c/listViews/ALL_material.listView-meta.xml
<ListView>
    <fullName>ALL_material</fullName>
    <columns>MATNR__c</columns>
    <columns>NAME</columns>
    <columns>MAT_TYP__c</columns>
    <columns>MENGE__c</columns>
    <columns>MENGE_KG__c</columns>
    <columns>BATCH__c</columns>
    <columns>LGORT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MAT_TYP__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>MENGE__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>전체 원자재</label>
</ListView>